--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "faker": "^6.6.6",
     "graphql": "^16.8.1",
     "next": "15.2.2",
+    "p-limit": "^6.2.0",
     "payload": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
