--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=1024\" next dev",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "start": "cross-env NODE_OPTIONS='--no-deprecation --max-old-space-size=1024' next start",
     "seed": "PAYLOAD_DROP_DATABASE=true payload run src/seed.ts"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/db-postgres": "3.27.0",
+    "@payloadcms/next": "3.27.0",
+    "@payloadcms/payload-cloud": "3.27.0",
+    "@payloadcms/richtext-lexical": "3.27.0",
     "cross-env": "^7.0.3",
     "faker": "^6.6.6",
     "graphql": "^16.8.1",
-    "next": "15.2.2",
+    "next": "15.0.4",
     "p-limit": "^6.2.0",
-    "payload": "latest",
+    "payload": "3.27.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "0.32.6"
